1999-09-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server/driver.c (main): use the holding disk even if the
	datestamped directory already exist.

1999-09-14  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* configure.in: Get snapshot date from SNAPSHOT file, if it exists.
	(VERSION): Add the date to it.
	(SNAPSHOT_STAMP): AC_SUBST to the SNAPSHOT file, if it exists.
	* Makefile.am (EXTRA_DIST): Added $(SNAPSHOT_STAMP).
	(config.status): Depend on $(SNAPSHOT_STAMP).
	(SNAPSHOT): Dummy rule to allow reconfigure if it's removed.

	* config/Makefile.am: Remove all traces of acconfig.h.

	* server-src/changer.c (changer_command): Fix for amwait_t != int.

1999-09-13  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* config/acinclude.m4i: Added comments for config/config.h.in to all
	AC_DEFINEs.
	* configure.in: Likewise.
	* config/acconfig.h: Deleted.
	* autogen: Updated.

1999-09-13 John R. Jackson  <jrj@purdue.edu>

	* server-src/amverify.sh.in: protect against uname not returning
	  anything.

1999-09-12  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amcheck.c (start_server_check): use tapefile instead of
	conf_tapelist to open the file (we no longer cd to the config file).

1999-09-11 John R. Jackson  <jrj@purdue.edu>

	* server-src/reporter.c: sigh -- it was right the first time.

1999-09-11 John R. Jackson  <jrj@purdue.edu>

	* server-src/reporter.c: lost a few too many lines with the amlogroll
	  changes to amreport.

1999-09-11 John R. Jackson  <jrj@purdue.edu>

	* server-src/amindex.c: minor memory leak.

1999-09-11 John R. Jackson  <jrj@purdue.edu>

	* server-src/amcheck.c: remove duplicated code.

1999-09-11 John R. Jackson  <jrj@purdue.edu>

	* server-src/Makefile.am: use new amlogroll utility to rename the log
	  file to the datestamped name.
	* server-src/amcheck.c: ditto.
	* server-src/amcleanup.sh.in: ditto and call all utilities with the
	  config file name as an argument.